# pypsa-app

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: codeql.yml  push-image.yaml
compose/: .env.example  compose.dev.yaml  compose.full.yaml  compose.minimal.yaml
frontend/app/: package-lock.json  package.json
frontend/app/src/: hooks.server.ts
frontend/app/src/lib/: types.ts  utils.js  utils.ts
frontend/app/src/lib/api/: client.js  client.ts
frontend/app/src/lib/components/: AppSidebar.svelte  DataTable.svelte  EmptyState.svelte  FilterBar.svelte  Navbar.svelte  OwnerCell.svelte  PaginatedTable.svelte  Pagination.svelte  TableSkeleton.svelte
frontend/app/src/lib/server/: auth.ts
frontend/app/src/routes/: +layout.svelte  +page.svelte
scripts/: generate_settings_docs.py
src/pypsa_app/: __init__.py  cli.py
src/pypsa_app/backend/: cache.py  database.py  main.py  models.py  permissions.py  settings.py  spa_static_files.py  task_queue.py  tasks.py
src/pypsa_app/backend/alembic/: env.py
src/pypsa_app/backend/api/: deps.py
src/pypsa_app/backend/auth/: __init__.py  authenticate.py  session.py
src/pypsa_app/backend/schemas/: api_key.py  backend.py  network.py  plot.py  run.py  statistics.py  version.py
src/pypsa_app/backend/services/: backend_registry.py  callback.py  email.py  network.py  run.py  statistics.py  sync.py
src/pypsa_app/backend/templates/: email.html.j2
src/pypsa_app/backend/utils/: path_validation.py  serializers.py
(+87 files in other folders)
