[project]
name = "pypsa-app"
description = "tbd"
dynamic = ["version"]
authors = [
    { name = "Lukas Trippe", email = "lkstrp@pm.me" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
keywords = ["pypsa", "energy", "power-systems", "visualization"]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "pypsa>1.1",
    "click",
    "authlib",
    "itsdangerous",
    "httpx",
]

[project.optional-dependencies]
full = [
    "psycopg2-binary",
    "redis",
    "celery[redis]",
]

dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
pypsa-app = "pypsa_app.cli:main"

[project.urls]
Homepage = "https://app.pypsa.org"
Documentation = "https://github.com/PyPSA/pypsa-app/blob/main/README.md"
Repository = "https://github.com/PyPSA/pypsa-app"
Issues = "https://github.com/PyPSA/pypsa-app/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pypsa_app.backend" = ["static/**/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
